Added class function/sub snippets. (Class scoped functions can be private.)

--- a/info.plist
+++ b/info.plist
@@ -22,6 +22,8 @@
 		<string>60377C4C-7E92-4D78-9F28-D657BEB422C0</string>
 		<string>BA60B3A4-A435-484D-9815-8A19FB5332E2</string>
 		<string>6E9D52B7-B392-45ED-BB39-AC48E1C99129</string>
+		<string>BC8C6A53-45FB-4533-864C-AC5450AD55A6</string>
+		<string>FD28FC26-C87C-4D91-A077-908BC1277F58</string>
 		<string>A345F8DD-F564-4F5B-B783-C796A9B5640B</string>
 		<string>F3C2B69D-279B-483A-8412-A770EF98C070</string>
 		<string>D8628EE8-AF43-4DF4-96E8-CF1E78FE5993</string>
